--- a/tex/star.tex
+++ b/tex/star.tex
@@ -6,7 +6,7 @@
 \paragraph{Эффективная тепература} - нужна для промежуточных расчётов и классификации.
 \paragraph{Спектр и классификация} - нужны для учёта других параметров и для правильного описания.
 
-\subsection{Rонстанты и вводимые обозначения}
+\subsection{Константы и вводимые обозначения}
 $$L_\odot = 3.827\cdot 10^{26} \mbox{Вт}$$
 $$l=\frac{L}{L_\odot};\; m=\frac{M}{M_\odot}.$$
 \subsection{Взаимосвязь параметров}
@@ -26,17 +26,18 @@ $T_E$ - эффективная температура.
 \end{equation}
 
 \begin{equation}
-\begin{array}{ll}
-	l \approx 0.32m^{2.3}, & (m<0.43), \\
-	l \approx m^{4}, & (0.43<m<2), \\
-	l \approx 1.5m^{3.5}, & (2<m<20), \\
-	l \approx 3200m, & (m>20).
-\end{array}
+\begin{cases}
+	l \approx 0.32m^{2.3}, & m<0.43, \\
+	l \approx m^{4}, & 0.43<m<2, \\
+	l \approx 1.5m^{3.5}, & 2<m<20, \\
+	l \approx 3200m, & m>20.
+\end{cases}
 \end{equation}
-
-Для звёзд с $m<0.43$ основным механизмом переноса является конвекция. 
-Вариант $2<m<20$ - относится к звёздам главной последовательности и не применим к красным гигантам и белым карликам.
-Если достигнут предел Эддингтона - $a=1$.
+\begin{itemize}
+\item Для звёзд с $m<0.43$ основным механизмом переноса является конвекция. 
+\item Вариант $2<m<20$ - относится к звёздам главной последовательности и не применим к красным гигантам и белым карликам.
+\item Если достигнут предел Эддингтона - $a=1$.
+\end{itemize}
 
 Для белых карликов - не существует зависимости масса-светимость.
 
